--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   equatable: ^2.0.5
   go_router: ^14.4.1
   flutter_bloc: ^8.1.6
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
