--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^1.2.2
   image_picker_for_web: ^3.0.6
   image_picker: ^1.1.2
+  flutter_profile_picture: ^2.0.0
 
 dev_dependencies:
   flutter_test:
