--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   image_picker_for_web: ^3.0.6
   image_picker: ^1.1.2
   flutter_profile_picture: ^2.0.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
